--- a/style.css
+++ b/style.css
@@ -1140,3 +1140,18 @@ label.sym-label {
     font-size: 0.9em;
     /* background-color and color will be handled by default checkbox-label styles */
 }
+#stats-content div { /* This will apply to all divs including the new tick one */
+    margin-bottom: 3px;
+    font-size: 0.9em;
+    white-space: nowrap; /* Prevent wrapping of label and value */
+}
+#stats-content span { /* This will apply to all spans including the new tick one */
+    font-weight: bold;
+    min-width: 45px; /* Adjust if necessary for "Tick:" label */
+    display: inline-block;
+    text-align: right;
+    margin-left: 5px;
+    background-color: rgba(0,0,0,0.2);
+    padding: 1px 4px;
+    border-radius: 2px;
+}
