--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('src/styles/mobile.css');
 /*
   Main Stylesheet Entry Point for HexLife Explorer
   This file uses @import to load modularized CSS files in the correct order.
@@ -19,9 +20,17 @@
 @import url('src/ui/components/SliderComponent.css');
 @import url('src/ui/components/DraggablePanel.css');
 @import url('src/ui/components/PopoutPanel.css');
+@import url('src/ui/components/BottomSheet.css');
 
 /* 5. Feature-Specific Panel Components */
 @import url('src/ui/components/RulesetEditor.css');
 @import url('src/ui/components/SetupPanel.css');
 @import url('src/ui/components/AnalysisPanel.css');
 @import url('src/ui/components/RuleRankPanel.css');
+
+/* 6. Mobile-Specific Full-Screen Views */
+@import url('src/ui/views/MobileViews.css'); /* A general style for all mobile views */
+@import url('src/ui/views/RulesView.css');
+@import url('src/ui/views/WorldsView.css');
+@import url('src/ui/views/AnalyzeView.css');
+@import url('src/ui/views/MoreView.css');
