ruleset editorview checkpoint

--- a/style.css
+++ b/style.css
@@ -34,3 +34,4 @@
 @import url('src/ui/views/WorldsView.css');
 @import url('src/ui/views/AnalyzeView.css');
 @import url('src/ui/views/MoreView.css');
+@import url('src/ui/views/EditorView.css');
