--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -29,9 +29,8 @@ screen and (pointer: coarse) and (hover: none) {
         height: 100%;
         flex-grow: 1;
         min-width: 0;
-        /* Important for flex-children sizing */
         touch-action: none;
-        /* Disables browser gestures like pull-to-refresh */
+        position: relative;
     }
 
     #vertical-toolbar {
@@ -189,15 +188,24 @@ screen and (pointer: coarse) and (hover: none) {
     }
 
     /* --- Mobile FABs --- */
-    #mobile-fab-container {
+    .mobile-fab-container {
         position: absolute;
         bottom: calc(env(safe-area-inset-bottom, 0px) + 10px);
-        right: 20px;
         z-index: 4500;
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
         gap: 15px;
+    }
+
+    /* Position the right container */
+    #mobile-fab-container-right {
+        right: 20px;
+    }
+
+    /* Add the new left container */
+    #mobile-fab-container-left {
+        left: 20px;
     }
 
     .mobile-fab {
